@@ -11,6 +11,7 @@ Bug fixes:
 - #7036 Fix tray icon not changing theme on Big Sur
 - #7046 Fix MacOS 10.13 build
 - #7049 Scroll doesn't work in case of macOS is server
+- #7056 Fix MacOS notification display when Synergy is in focus
 
 Enhancements:
 - #6998 Remove functionality related to the screen saver synchronisation
